# resume-assistant

./: .gcloudignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
notebooks/: ats_v1.ipynb  ats_v3.ipynb
pipelines/: __init__.py  extract_resume_content.py  get_job_description.py
resume_assistant/: consts.py
resume_assistant/application/dataset/: extraction.py  upload.py
resume_assistant/application/processing/: postprocess.py
resume_assistant/application/rag/: retriever.py  templates.py  utils.py
resume_assistant/frontend/src/: app.py  index.py
resume_assistant/frontend/src/assets/: index.css
resume_assistant/models/: model.py
tools/: run.py
